# frog

./: .env  Dockerfile  README.md  frog.py  pyproject.toml  requirements.txt  test_new_schema.py  test_openrouter.py  test_results.json  test_service.py
app/: __init__.py  api.py  config.py  engine.py  main.py  models.py  openrouter.py  planner.py  registry.py  vault.py
tests/: debug_openrouter.py  test_browserbase.py  test_chat.py  test_comprehensive.py  test_concise.py  test_registry.py
