[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frog"
version = "0.1.0"
description = "OpenAI-compatible micro-service with agent workflows"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Frog Team", email = "team@frog.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/frog-team/frog"
Documentation = "https://frog.dev/docs"
Repository = "https://github.com/frog-team/frog.git"
Issues = "https://github.com/frog-team/frog/issues"

[tool.hatch.build.targets.wheel]
packages = ["frog.py"] 